# hackspace-api

./: Dockerfile  Makefile  README.md  api.py  pyproject.toml  requirements-test.txt  requirements.txt  sensors.yaml
.github/workflows/: build-docker-containers.yaml  build-docker-image.yaml  tests.yaml
hackspaceapi/: config.py  doors.py  events.py  homeassistant.py  main.py  prometheus.py  spaceapi.py
hackspaceapi/models/: __init__.py  config.py  health.py  sensors.py
hackspaceapi/models/spaceapi/: v14.py  v14_lhs.py
hackspaceapi/models/spaceapi/v13/: __init__.py  sensors.py
hackspaceapi/services/: homeassistant.py  prometheus.py  session.py  website.py
hackspaceapi/tests/: test_doors.py  test_events.py  test_spaceapi.py  utils.py
hackspaceapi/tests/cassettes/: DoorsAuthTestCase.authentik_calls.yaml  DoorsAuthTestCase.test_failed_tag_read.yaml  DoorsAuthTestCase.test_invalid_groups_auth.yaml  DoorsAuthTestCase.test_successful_tag_read.yaml  DoorsAuthTestCase.test_valid_groups_auth.yaml  EventsTestCase.test_events_ics.yaml  EventsTestCase.test_events_json.yaml  SpaceAPITestCase.backend_calls.yaml
tests/: test_events.py  test_health.py  test_services.py  test_spaceapi.py  utils.py
tests/cassettes/: EventsTestCase.homeassistant_calendar.yaml  ServicesHomeassistantTestCase.test_simple_call.yaml  ServicesHomeassistantTestCase.test_simple_invalid_call.yaml  ServicesPrometheusTestCase.test_simple_call.yaml  ServicesPrometheusTestCase.test_simple_invalid_call.yaml  ServicesWebsiteTestCase.test_simple_call.yaml  SpaceAPITestCase.backend_calls.yaml
tools/: extract_settings.py
www/: index.html  status.js
