[tool.poetry]
name = "hackspace-api"
version = "1.1.3"
description = ""
authors = ["Andrew Williams <andy@tensixtyone.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leigh-hackspace/hackspace-api/"
packages = [{include = "hackspaceapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "0.105.0", extras = ["all"]}
requests = "2.31.0"
cachetools = "^5.3.1"
ics = "0.7.2"
arrow = "1.3.0"
prometheus-client = "0.19.0"
prometheus-fastapi-instrumentator = "6.1.0"
pydantic-settings = "2.1.0"
poetry = "^1.7.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
spacedirectory = "^0.0.5"
vcrpy = "^5.0.0"
ruff = "^0.1.9"

[tool.poetry.group.github]
optional = true

[tool.poetry.group.github.dependencies]
pytest-github-actions-annotate-failures = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
