[tool.poetry]
name = "hackspace-api"
version = "1.3.2"
description = ""
authors = ["Andrew Williams <andy@tensixtyone.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leigh-hackspace/hackspace-api/"
packages = [{include = "hackspaceapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "0.110.1", extras = ["all"]}
requests = "2.31.0"
cachetools = "^5.3.1"
ics = "0.7.2"
arrow = "1.3.0"
prometheus-client = "0.20.0"
prometheus-fastapi-instrumentator = "7.0.0"
pydantic-settings = "2.2.1"
poetry = "^1.7.1"
pydantic-extra-types = "^2.3.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
spacedirectory = "^0.0.5"
vcrpy = "^6.0.0"
ruff = "^0.8.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.github]
optional = true

[tool.poetry.group.github.dependencies]
pytest-github-actions-annotate-failures = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
